--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <table>
       <tr>
         <th>OS</th>
-        <td>Windows, Ubuntu など</td>
+        <td>Windows</td>
       </tr>
       <tr>
         <th>Engine, Frameworks</th>
@@ -44,11 +44,11 @@
     <h3>Works</h3>
     <p>アピールできる活動内容を書きましょう。</p>
     <ul>
-      <li><a href="https://x.com/kigu_235">GitHub</a></li>
-      <li><a href="https://www.twitch.tv/rex_dao">Qiita</a></li>
+      <li><a href="https://x.com/kigu_235">x</a></li>
+      <li><a href="https://www.twitch.tv/rex_dao">Twitch</a></li>
   
       <li>
-        作った作品
+    
         <ul>
          
         </ul>
